--- a/dev/jade/includes/nav-bar.jade
+++ b/dev/jade/includes/nav-bar.jade
@@ -7,48 +7,49 @@ nav.component.nav-bar
 						.nav-bar__header
 							h5.nav-bar__title Bałtex FHU #[sup &#174;]
 							h6.nav-bar__subtitle 
-								a(href="#", title="Transport międzynarodowy").nav-bar__sneakpeak Transport międzynarodowy
-								a(href="#", title="Sprzedaż tarcicy").nav-bar__sneakpeak Sprzedaż tarcicy
-								a(href="#", title="Magazyn czasowego składowania").nav-bar__sneakpeak Magazyn czasowego składowania
-						ul.nav-bar__nav.list-unstyled
-							li.nav-bar__hamburger
-								a.nav-bar__icon.js-hamburger(href="#", title="Menu głowne strony")
-									i.fa.fa-bars(aria-hidden="true")
-				.col-xs-12
-					.component.form-searcher
-						.form-searcher__inner
-							form(action="")
-								.form-group
-									.form-group__inner
-										input(type="text" class="form-control form-searcher__input", placeholder="Wyszukaj na stronie" required)
-										button(type="submit" class="btn btn-primary form-searcher__button") Wyszukaj w serwisie
-										span.form-searcher__label Wpisz słowo lub frazę, aby wyszukać w witrynie
-.sidebar-menu
-	.container
-		.row
-			.col-xs-12
-				ul.sidebar-menu__submenu.list-unstyled
-					li
-						a(href="#", title="Informacje kontaktowe")
-							code.sidebar-menu__title Kontakt
-							span.sidebar-menu__subtitle Skontakuj się z Nami
-					li
-						a(href="#", title="Wydrukuj stronę", class="js-window-print")
-							code.sidebar-menu__title Drukuj
-							span.sidebar-menu__subtitle Wydrukuj aktualną stronę
-					li
-						a(href="#", title="Dodaj do ulubionych", class="js-bookmark-application")
-							code.sidebar-menu__title Ulubione
-							span.sidebar-menu__subtitle Dodaj stronę do ulubionych
-					li
-						a(href="#", title="Informacje kontaktowe")
-							code.sidebar-menu__title Galeria
-							span.sidebar-menu__subtitle Spójrz na Nasze zdjęcia
-					li
-						a(href="#", title="Informacje kontaktowe")
-							code.sidebar-menu__title FAQ
-							span.sidebar-menu__subtitle Najczęściej zadawane pytania
-					li
-						a(href="#", title="Informacje kontaktowe")
-							code.sidebar-menu__title Opinie
-							span.sidebar-menu__subtitle Jak postrzegają Nas inni?
+								a(href="/", title="Strona głowna").nav-bar__sneakpeak Strona główna
+								a(href="transport-miedzynarodowy", title="Transport międzynarodowy").nav-bar__sneakpeak Transport międzynarodowy
+								a(href="sprzedaz-suchej-tarcicy-dab-sosna", title="Sprzedaż tarcicy").nav-bar__sneakpeak Sprzedaż tarcicy
+								a(href="magazyn-czasowego-skladowania", title="Magazyn czasowego składowania").nav-bar__sneakpeak Magazyn czasowego składowania
+						//- ul.nav-bar__nav.list-unstyled
+						//- 	li.nav-bar__hamburger
+						//- 		a.nav-bar__icon.js-hamburger(href="#", title="Menu głowne strony")
+						//- 			i.fa.fa-bars(aria-hidden="true")
+				//- .col-xs-12
+				//- 	.component.form-searcher
+				//- 		.form-searcher__inner
+				//- 			form(action="")
+				//- 				.form-group
+				//- 					.form-group__inner
+				//- 						input(type="text" class="form-control form-searcher__input", placeholder="Wyszukaj na stronie" required)
+				//- 						button(type="submit" class="btn btn-primary form-searcher__button") Wyszukaj w serwisie
+				//- 						span.form-searcher__label Wpisz słowo lub frazę, aby wyszukać w witrynie
+//- .sidebar-menu
+//- 	.container
+//- 		.row
+//- 			.col-xs-12
+//- 				ul.sidebar-menu__submenu.list-unstyled
+//- 					li
+//- 						a(href="#", title="Informacje kontaktowe")
+//- 							code.sidebar-menu__title Kontakt
+//- 							span.sidebar-menu__subtitle Skontakuj się z Nami
+//- 					li
+//- 						a(href="#", title="Wydrukuj stronę", class="js-window-print")
+//- 							code.sidebar-menu__title Drukuj
+//- 							span.sidebar-menu__subtitle Wydrukuj aktualną stronę
+//- 					li
+//- 						a(href="#", title="Dodaj do ulubionych", class="js-bookmark-application")
+//- 							code.sidebar-menu__title Ulubione
+//- 							span.sidebar-menu__subtitle Dodaj stronę do ulubionych
+//- 					li
+//- 						a(href="#", title="Informacje kontaktowe")
+//- 							code.sidebar-menu__title Galeria
+//- 							span.sidebar-menu__subtitle Spójrz na Nasze zdjęcia
+//- 					li
+//- 						a(href="#", title="Informacje kontaktowe")
+//- 							code.sidebar-menu__title FAQ
+//- 							span.sidebar-menu__subtitle Najczęściej zadawane pytania
+//- 					li
+//- 						a(href="#", title="Informacje kontaktowe")
+//- 							code.sidebar-menu__title Opinie
+//- 							span.sidebar-menu__subtitle Jak postrzegają Nas inni?
