--- a/dev/sass/site/components/_comp-lists.scss
+++ b/dev/sass/site/components/_comp-lists.scss
@@ -18,3 +18,47 @@
 
 	}
 }
+
+.list--icon {
+	@include clearfix;
+	margin-bottom: 0;
+	li {
+		float: left;
+		font-size: $font-size-lg;
+		padding: $spacer-sm $spacer-xs;
+		color: $brand-primary-light;
+		&:first-child {
+			padding-left: 0;
+		}
+	}
+	a {
+		font-size: inherit;
+		color: inherit;
+	}
+	a {
+		&:hover {
+			color: $brand-primary;
+			span {
+				&:after {
+					background-color: $gray;
+				}
+			}
+		}
+	}
+	span {
+		position: relative;
+		&:after {
+			@include transition;
+			content: '';
+			position: absolute;
+			left: 0;
+			right: 0;
+			bottom: -2px;
+			height: 1px;
+			background-color: $gray-lighter;
+		}
+	}
+	i {
+		padding-right: $spacer-xs;
+	}
+}
