BAŁTEX-8 Dodanie Web packa

--- a/dev/jade/js/scripts.jade
+++ b/dev/jade/js/scripts.jade
@@ -1,3 +1,4 @@
-script(src=path_js + "vendor.min.js")
-script(src=path_js + "plugins/plugins.min.js")
-script(src=path_js + "core.js")
+script(src=path_js + "vendor.min.js", charset="UTF-8")
+script(src=path_js + "plugins/plugins.min.js", charset="UTF-8")
+script(src=path_js + "components/components.js", charset="UTF-8")
+script(src=path_js + "core.js", charset="UTF-8")
