--- a/dev/sass/bootstrap/_code.scss
+++ b/dev/sass/bootstrap/_code.scss
@@ -8,7 +8,7 @@ samp {
 
 // Inline code
 code {
-  padding: $code-padding-y $code-padding-x;
+  padding: 5px 5px 3px 5px;
   font-size: $code-font-size;
   color: $code-color;
   background-color: $code-bg;
