--- a/dev/sass/site/components/_comp-main-slider.scss
+++ b/dev/sass/site/components/_comp-main-slider.scss
@@ -22,6 +22,10 @@
 			    z-index: 1;
 			}
 		}
+		@include media-breakpoint-down(sm) {
+			background-size: 250%;
+			background-position: 50% 0;
+		}
 	}
 	&__inner {
 		position: relative;
@@ -93,7 +97,7 @@
 				background-position: 50% 50%;
 				@include media-breakpoint-down(sm) {
 					background-image: none !important; /* Nadpisanie JS'a */
-				}	
+				}
 				&:after {
 					content: '';
 					position: absolute;
