--- a/dev/sass/site/components/_comp-slick.scss
+++ b/dev/sass/site/components/_comp-slick.scss
@@ -1,5 +1,10 @@
 .slick--centered {
 	position: relative;
+	@include media-breakpoint-down(sm) {
+		.slick-list {
+			padding: 0 15px !important;
+		}
+	}
 	&:before, &:after {
 		content: '';
 		position: absolute;
@@ -8,6 +13,9 @@
 		background-color: rgba(255,255,255,.8);
 		z-index: 1;
 		width: 15px;
+		@include media-breakpoint-down(sm) {
+			width: 10px;
+		}
 	}
 	&:before {
 		left: 0;
@@ -33,6 +41,7 @@
 					margin-right: 0;
 				}
 				button {
+					@include transition;
 					border-radius: 50%;
 					text-indent: -9999px;
 					width: 10px;
@@ -40,10 +49,13 @@
 					border: 0;
 					margin: 0;
 					padding: 0;
+					cursor: pointer;
+					background-color: $gray-lighter;
 				}
 				&.slick-active {
 					button {
 						background-color: $brand-second;
+						cursor: default;
 					}
 				}
 			}
