--- a/dev/jade/config/config.jade
+++ b/dev/jade/config/config.jade
@@ -25,3 +25,4 @@
 - var path_js            = path_assets.concat('js/')
 - var google_analitics   = false
 - var cookies_policy 	 = true
+- var is_it_home_page    = true
