--- a/dev/sass/bootstrap/_custom.scss
+++ b/dev/sass/bootstrap/_custom.scss
@@ -18,6 +18,7 @@ $path_assets: '../../assets/';
 $path_images: $path_assets + 'images/';
 
 //- Colors
+$body-color         : #3a3a3a;
 $brand-primary		: #212a34;
 $brand-primary-light: #494f54;
 $blue-dark			: #405e74;
