--- a/dev/sass/site/components/_comp-main-slider.scss
+++ b/dev/sass/site/components/_comp-main-slider.scss
@@ -123,18 +123,23 @@
 						text-indent: -99999px;
 					}
 				}
+				&:before {
+					@include transition;
+					content: '';
+					position: absolute;
+					left: 0;
+					right: 0;
+					bottom: 0;
+					height: 3px;
+					background-color: $brand-second;
+					z-index: 1;
+					opacity: 0;
+				}
 			}
 			&.slick-active {
 				span {
 					&:before {
-						content: '';
-						position: absolute;
-						left: 0;
-						right: 0;
-						bottom: 0;
-						height: 3px;
-						background-color: $brand-second;
-						z-index: 1;
+						opacity: 1;
 						@include media-breakpoint-down(sm) {
 							display: none;
 						}
@@ -144,6 +149,13 @@
 					}
 					h6 {
 						color: $brand-primary;
+					}
+				}
+			}
+			&:hover {
+				span {
+					&:before {
+						opacity: 1;
 					}
 				}
 			}
