BAŁTEX-12 Dodanie wyszukiwarki

--- a/dev/jade/includes/top-bar.jade
+++ b/dev/jade/includes/top-bar.jade
@@ -35,3 +35,6 @@
                                 a(href="#", title="Opinie o naszej firmie")
                                     i.fa.fa-comments-o(aria-hidden="true")
                                     | Opinie o nas
+                    li.top-nav__element
+                        a(href="#", class="js-search top-nav__search")
+                            i.fa.fa-search
