--- a/dev/sass/bootstrap/_custom.scss
+++ b/dev/sass/bootstrap/_custom.scss
@@ -25,6 +25,7 @@ $blue-dark			: #405e74;
 $brand-second		: #ff6200;
 $gray		  		: #c3c3c3;
 $gray-lighter		: #ebebeb;
+$input-color-placeholder : $gray;
 
 //- Spacers
 $spacer-xs	: 1rem;
