--- a/dev/sass/site/components/_comp-footer.scss
+++ b/dev/sass/site/components/_comp-footer.scss
@@ -41,7 +41,7 @@
 	&__anchor {
 		font-weight: 300;
 	}
-	&__copyright p {
+	&__brand p {
 		margin-bottom: 0;
 		opacity: .8;
 	}
@@ -52,4 +52,3 @@
 		padding-bottom: $spacer-md;
 	}
 }
-
