--- a/dev/jade/config/base.jade
+++ b/dev/jade/config/base.jade
@@ -58,4 +58,5 @@ html()&attributes({
             //- footer
             if footer
                 include ../includes/footer
+            include ../includes/search-modal
         include ../js/scripts
