--- a/dev/sass/site/components/_comp-top-nav.scss
+++ b/dev/sass/site/components/_comp-top-nav.scss
@@ -9,7 +9,7 @@
         float: left;
 		padding: $spacer-sm 15px;
         line-height: 1.1;
-        &:nth-last-child(2), &:last-child {
+        &:nth-last-child(2), &:nth-last-child(3){
             a {
                 &:after {
                     display: none;
@@ -26,12 +26,6 @@
         position: relative;
         font-size: $font-size-lg;
 		color: $brand-primary-light;
-        &--search {
-            i {
-                padding-right: $spacer-xs;
-                color: $brand-second;
-            }
-        }
         &--dropdown {
             position: relative;
             border: 1px solid $gray-lighter;
@@ -66,6 +60,16 @@
             height: 100%;
             width: 1px;
             background-color: $gray-lighter;
+        }
+    }
+    &__search {
+        color: $brand-second;
+        background-color: $gray-lighter;
+        padding: 1.2rem 1.5rem 1.5rem 1.5rem;
+        border-radius: $border-radius;
+        &:hover, &:focus {
+            color: #fff;
+            background-color: $brand-second;
         }
     }
 }
