--- a/dev/jade/index.jade
+++ b/dev/jade/index.jade
@@ -79,16 +79,9 @@ block page_content
 										img(src="" + path_image + "company-contact.jpg")
 									.info-box__content
 										h5.info-box__title Informacje kontaktowe
-										p.info-box__description Siedziba Naszej firmy znajduje się w powiecie Lipskim w województwie mazowieckim.
-										ul.list-unstyled.list-header
-											li.list-header__item.list-header__item--header Dokładny adres
-											li.list-header__item Długowola Pierwsza 467 #[br] 27-300 Lipsko
-											li.list-header__item Telefon:&nbsp;
-												a(href="tel:123456789") 123-456-789
-											li.list-header__item Fax: 22-33-456-22
-											li.list-header__item E-mail: testowy@testowy.com.pl
+										p.info-box__description Siedziba Naszej firmy znajduje się w powiecie Lipskim w województwie mazowieckim. #[code Dokładny adres] znajdziesz na Naszej stronie kontaktowej. Znajdziesz tam numer telefonu, adres mailowy oraz formularz kontaktowy.
 										.info-box__link
-											a(href="#", title="").btn.btn-lg.btn-transparent Sprawdź mapę 
+											a(href="#", title="").btn.btn-lg.btn-transparent Sprawdź informacje kontaktowe
 						.item
 							.info-box
 								.info-box__inner
