--- a/dev/jade/includes/search-modal.jade
+++ b/dev/jade/includes/search-modal.jade
@@ -8,4 +8,4 @@
                     .search-modal__content
                         input(type="search", placeholder="Szukaj...", class="search-modal__input")
                         p.search-modal__notification.text-muted Naciśnij klawisz #[em Esc] aby zamknąć, lub #[em Enter] aby wyszukać
-                    a(href="#", class="js-search-close search-modal__close")
+                    a(href="#", title="Zamknij", class="js-search-close search-modal__close")
