--- a/dev/sass/site/components/_comp-buttons.scss
+++ b/dev/sass/site/components/_comp-buttons.scss
@@ -7,6 +7,7 @@
 		color: #fff;
 		&:active, &:focus, &:hover {
 			color: #fff;
+			background-color: darken($brand-second, 10%);
 		}
 	}
 	&-transparent {
