--- a/dev/sass/site/components/_comp-social-side-bar.scss
+++ b/dev/sass/site/components/_comp-social-side-bar.scss
@@ -4,7 +4,7 @@
     top: 50%;
     transform: translateY(-50%);
     z-index: 9;
-    @include media-breakpoint-down(sm) {
+    @include media-breakpoint-down(md) {
         display: none;
     }
     &__list {
