--- a/dev/sass/site/components/_comp-footer.scss
+++ b/dev/sass/site/components/_comp-footer.scss
@@ -17,6 +17,11 @@
 		display: table-cell;
 		width: 50%;
 		vertical-align: middle;
+		@include media-breakpoint-down(sm) {
+			display: block;
+			width: 100%;
+			text-align: center;
+		};
 	}
 	&__logo {
 		margin: 0;
@@ -24,6 +29,10 @@
 	}
 	&__list {
 		text-align: right;
+		@include media-breakpoint-down(sm) {
+			text-align: center;
+			margin-top: $spacer-xs;
+		};
 		ul {
 			margin: 0;
 		}
@@ -50,5 +59,19 @@
 .widget {
 	&--footer {
 		padding-bottom: $spacer-md;
+	}
+	&__title {
+		position: relative;
+		display: inline-block;
+		margin-bottom: $spacer-md;
+		&:after {
+			content: '';
+			position: absolute;
+			width: 50px;
+			height: 2px;
+			background-color: $brand-second;
+			left: 0;
+			bottom: -15px;
+		}
 	}
 }
