--- a/dev/sass/site/components/_comp-nav-bar.scss
+++ b/dev/sass/site/components/_comp-nav-bar.scss
@@ -1,13 +1,8 @@
 .nav-bar {
 	display: block;
-	background-color: $brand-primary;
-	border-bottom: 3px solid $brand-second;
-	@include media-breakpoint-down(sm) {
-		position: fixed;
-		top: 0;
-		left: 0;
-		right: 0;
-		z-index: 19;
+	&__inner {
+		background-color: $brand-primary;
+		border-bottom: 3px solid $brand-second;
 	}
 	&__source {
 		@include transition;
@@ -72,8 +67,85 @@
 		}
 	}
 	&__hamburger {
-		float: left;
-		position: relative;
+		position: absolute;
+		right: 0;
+		top: 50%;
+		transform: translateY(-50%);
+		margin-top: -1px;
+	}
+	&__hamburger-menu {
+		width: 45px;
+	    height: 27px;
+	    position: relative;
+	    margin: 0 0 0 auto;
+	    transform: rotate(0deg);
+	    transition: 0.5s ease-in-out;
+	    cursor: pointer;
+	}
+	&__hamburger-element {
+		display: block;
+	    position: absolute;
+	    height: 5px;
+	    width: 100%;
+	    background: $brand-second;
+	    border-radius: 9px;
+	    opacity: 1;
+	    left: 0;
+	    transform: rotate(0deg);
+	    transition: 0.25s ease-in-out;
+		&:first-child {
+			top: 0px;
+			transform-origin: left center;
+			&.is-active {
+				top: -3px;
+				left: 8px;
+				transform: rotate(45deg);
+			}
+		}
+		&:nth-child(2) {
+			top: 12px;
+			transform-origin: left center;
+			&.is-active {
+				width: 0%;
+    			opacity: 0;
+			}
+		}
+		&:last-child {
+			top: 24px;
+			transform-origin: left center;
+			&.is-active {
+			    top: 29px;
+			    left: 8px;
+				transform: rotate(-45deg);
+			}
+		}
+	}
+	&__mobile {
+		position: absolute;
+		background-color: #fff;
+		left: 0;
+		right: 0;
+		top: 69px;
+		z-index: 9;
+		display: none;
+		box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.35);
+	}
+}
+
+// Menu list mobile
+.list-mobile {
+	&__element {
+		border-bottom: 1px solid $gray-lighter;
+		&:last-child {
+			border: 0;
+		}
+	}
+	&__anchor {
+		display: block;
+		padding: $spacer-xs;
+		&:hover {
+			color: $brand-second;
+		}
 	}
 }
 
@@ -87,13 +159,16 @@
 	width: 100%;
 	z-index: 99;
 	background-color: #fff;
-	border: 1px solid $gray-lighter;
+	border: 1px solid $brand-second;
 	border-top: 0;
 	margin: 0;
 	margin-top: 17px;
 	list-style-type: none;
 	padding-left: 0;
 	padding: $spacer-xs 0;
+	&--active {
+		display: block;
+	}
 	li {
 		margin: 0 1.5rem 0 2.5rem;
 		border-bottom: 1px solid $gray-lighter;
