BAŁTEX-15 Przygotowanie page headera + breadcrumbsów

--- a/dev/jade/kontakt.jade
+++ b/dev/jade/kontakt.jade
@@ -1,5 +1,9 @@
 //- Document Head
 extends config/base
 block page_title
-	title= "Transport międzynarodowy | Bałtex"
+	title= "Kontakt | Bałtex"
 block page_content
+	+page-header(
+		'Kontakt',
+		'Skontakuj się z nami. </br> Jesteśmy do Twojej dyspozycji od poniedziałku do soboty.'
+	)
