--- a/dev/sass/site/components/_components.scss
+++ b/dev/sass/site/components/_components.scss
@@ -54,3 +54,9 @@
 
 //- Search modal
 @import "comp-search-modal";
+
+//- Pager header
+@import "comp-page-header";
+
+//- breadcrumbs
+@import "comp-breadcrumbs";
