BAŁTEX-16 PageHeader (drobne poprawki styli) + rwd

--- a/dev/jade/kontakt.jade
+++ b/dev/jade/kontakt.jade
@@ -5,5 +5,6 @@ block page_title
 block page_content
 	+page-header(
 		'Kontakt',
-		'Skontakuj się z nami. </br> Jesteśmy do Twojej dyspozycji od poniedziałku do soboty.'
+		'Jesteśmy do Twojej dyspozycji </br> od poniedziałku do soboty.',
+		'kontakt-header-background.jpg'
 	)
